objects/EmployeeLocation__c.object
<CustomObject>
    <description>A work table showing all locations someone has worked, based on their wages and hours, or screening location, or latest known location.</description>
    <fields>
        <fullName>CumulativeHourAmount__c</fullName>
        <description>The total amount of hours that this employee worked at this location over the period specified.</description>
        <inlineHelpText>The total amount of hours that this employee worked at this location over the period specified.</inlineHelpText>
        <label>Cumulative Hours</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmployeeLocationEID__c</fullName>
        <description>This is how to connect to the Enterprise database.</description>
        <inlineHelpText>This is how to connect to the Enterprise database.</inlineHelpText>
        <label>Employee Location EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The employment period during which this employee worked at this location.</description>
        <inlineHelpText>The employment period during which this employee worked at this location.</inlineHelpText>
        <label>Employment Period</label>
        <referenceTo>Employment__c</referenceTo>
        <relationshipName>wktEmployeeLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The date this employee stopped working at this location, or the latest date we know of based on wage data in our system.</description>
        <inlineHelpText>The date this employee stopped working at this location, or the latest date we know of based on wage data in our system.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location where this employee worked during this time period.</description>
        <inlineHelpText>The location where this employee worked during this time period.</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>wktEmployeeLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The date this employee started working at this location.</description>
        <inlineHelpText>The date this employee started working at this location.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Employee Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employment__c</columns>
        <columns>Location__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>CumulativeHourAmount__c</columns>
        <columns>EmployeeLocationEID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Employee Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>